# NEXUS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
nexus/: __init__.py  cli.py  client.py  config.py  core.py  data.py  main.py  models.py  registry.py  risk.py  strategies.py
nexus/adapters/: quotex.py
nexus/core/: __init__.py  engine.py  evolution.py  memory.py
nexus/data/: __init__.py  trade_history.py
nexus/gui/: __init__.py  launch_gui.py  main_window.py
nexus/gui/views/: dashboard_view.py
nexus/intelligence/: regime_detector.py  rl_agent.py  transformer.py
nexus/strategies/: __init__.py  meta_strategy.py
nexus/utils/: config.py  logger.py  logging.py  metrics.py  technical.py
tests/: test_config.py  test_engine.py  test_intelligence.py
